# mirador

./: .gitignore  2025-07-09-this-session-is-being-continued-from-a-previous-co.txt  2025-07-10-this-session-is-being-continued-from-a-previous-co.txt  ADVANCED_FEATURES.md  ARCHITECTURE_DIAGRAMS.md  BEST_PRACTICES_INTEGRATION.md  CHAIN_INPUTS_GUIDE.md  CHANGELOG.md  CLAUDE.md  CLAUDE.md.backup-20251024  COMPLETE_WORK_INVENTORY.md  CONSOLIDATED_MODELS.md  CONTEXT_INTEGRATION_SUMMARY.md  CONTRIBUTING.md  Comprehensive Analysis_ The Mirador AI Framework.md  Comprehensive Technical Analysis_ Mirador AI Framework Deep-Dive.md  Cross-DomainPromptLibrary.md  DEDUPLICATION_STRATEGY.md  DEVELOPMENT_CHECKLIST.md  DOCUMENTATION_INDEX.md  Dockerfile  ENHANCED_PROMPT_LIBRARY.md  EXECUTIVE_SUMMARY_20250608.md  Evolution from Concept to Production-Ready Personal Life Automation Platform.docx  FILE_INGESTION.md  HUMANA_INTEGRATION_GUIDE.md  IMMEDIATE_ACTION_PLAN_20250608.md  IMPLEMENTATION_PLAN.md  MATTHEW_INTEGRATION_GUIDE.md  MIRADOR_ACADEMIC_PAPER.md  MIRADOR_COMPREHENSIVE_REFERENCE.md  MIRADOR_DALIA_ALIGNMENT.md  MIRADOR_DEMO_SCENARIOS.md  MIRADOR_EXECUTIVE_PRESENTATION.md  MIRADOR_KNOWLEDGE_COMPACT.md  MIRADOR_METRICS_DASHBOARD.md  MIRADOR_MODEL_OPTIMIZATION_STRATEGY.md  MIRADOR_POLITICAL_NAVIGATION.md  MIRADOR_REAL_WORLD_TEST_SCENARIOS.md  MIRADOR_RISK_MITIGATION.md  (+253 more)
.claude/: PROJECT_HANDOFF.md
.decoy/: monitor.py
Documentation and Saved Assets/: AI-Powered Personal Advisory System_ Video Script Structure.md  Enhanced Ollama Model Files for M3 Max MacBook Pro.md  GitHub Repository Analysis - Initial Findings.md  Mirador Strategic Analysis_ Deep Reflection & Recommendations.md  Specialized Ollama Model Files for Matthew Scott (1).md  executive_portfolio_summary.md  linkedin_transformation_posts.md
Perplexity/: Specialized Ollama Model Files for Matthew Scott.md
analysis_output/: backup_models.sh  consolidation_analysis.md  migration_guide.md  model_inventory_report.md  retire_models.sh
archive/: Mirador_An_Orchestrated_AI_Chaining_Framework.txt  action_steps_todo.md  advanced_guitar_curriculum.json  comprehensive_review_todo.md  comprehensive_security_gitignore_template.txt  doc_index.txt  mirador_critique_todo.md  mirador_system_inventory.txt  mirador_testing_todo.md  modelfile_map.txt  (+6 more)
(+3998 files in other folders)
