[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mirador-ai"
version = "1.0.0"
description = "Local AI orchestration framework with multi-agent chaining"
authors = [
    {name = "Matthew Scott", email = "matthewdscott7@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.9"
keywords = ["ai", "ollama", "local-llm", "multi-agent", "orchestration", "privacy"]

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "pyyaml>=6.0",
    "rich>=13.0",
    "click>=8.1.0",
    "requests>=2.31.0",
    "httpx>=0.25.0",
    "structlog>=23.0.0",
    "typer>=0.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "black>=23.12.0",
    "flake8>=6.1.0",
]

web = [
    "streamlit>=1.32.0",
    "plotly>=5.18.0",
]

[project.urls]
Homepage = "https://github.com/guitargnarr/mirador"
Repository = "https://github.com/guitargnarr/mirador"
Documentation = "https://github.com/guitargnarr/mirador/tree/main/docs"

[project.scripts]
mirador = "mirador.cli:main"

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311']

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short --cov=mirador --cov-report=term-missing"

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
